--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body.page-background {
 
 body a {
     text-decoration: none;
-    color: #ffffff;
+    color: #bf0b14;
     transition: color .2s ease;
 }
 
